--- a/shared/labels.less
+++ b/shared/labels.less
@@ -350,7 +350,7 @@
 	text-halo-radius: @water_halo_radius;
 	text-halo-rasterizer: fast;
 	text-dy:@waterway_label_dy;
-	text-spacing: 70;
+	text-spacing: @waterway_label_spacing;
 	text-size: @waterway_text_width;
 	[class=river] {
 		text-size: @river_text_width;
